# LumixCameraSettingsProject

./: .gitignore
Configuration Guides/: G9II-Complete-Menu-Walkthrough.md  PROJECT-NOTES.md  camera-config-g9mkii.json
LumixG9Settings/: .gitignore  CLAUDE.md  pyproject.toml
LumixG9Settings/data/capabilities/: DC-G9M2_FW2.7.json
LumixG9Settings/data/g9/: serial.txt
LumixG9Settings/data/g9ii/: Serial.txt
LumixG9Settings/docs/: VISION.md
LumixG9Settings/scripts/: diagnose_wifi.py  ptp_fn_query.py  watch_camset.py
LumixG9Settings/scripts/tether_query/: CMakeLists.txt  hybrid_test.cpp  main.cpp  sdk_test.cpp  tether512_test.cpp  tether_clean_test.cpp  tether_connect_test.cpp  tether_msgpump.cpp  tether_open_test.cpp  tether_search_first.cpp  tether_test.cpp  tether_usb_mode.cpp  wpd_camset.cpp  wpd_camset2.cpp  wpd_configscan.cpp  wpd_deepscan.cpp  wpd_fnprobe.cpp  wpd_getprop.cpp  wpd_objinfo.cpp  wpd_query.cpp  wpd_scan.cpp  wpd_setupctrl.cpp  wpd_snapshot.cpp  wpd_test.cpp  wpd_vendor.cpp
LumixG9Settings/src/xlumix/: __init__.py  cli.py
LumixG9Settings/src/xlumix/camset/: __init__.py  bytemap.py  differ.py  parser.py  reader.py  record_differ.py  validator.py
LumixG9Settings/src/xlumix/reveng/: manual.py  workflow.py
LumixG9Settings/src/xlumix/wifi/: __init__.py  client.py  discovery.py  probe.py
LumixG9Settings/tests/: test_camset_bytemap.py  test_camset_differ.py  test_camset_parser.py  test_manual_mapping.py  test_record_differ.py  test_validator.py  test_wifi_discovery.py
LumixG9Settings/tests/fixtures/g9ii/: getsetting_colormode.xml
XmacroSettings/python/source/: MacroBracketCalc.spec  build.py  main.py
XmacroSettings/python/source/core/: calculations.py  gear_data.py
XmacroSettings/python/source/pwa/: index.html  manifest.json  sw.js
XmacroSettings/python/source/ui/: calibration_dialog.py  main_window.py
XmacroSettings/python/windows/data/: equipament.json
data/: camera-config-g9mki.json  camera-config-g9mkii.json
guides/: Custom-Modes-Conceptual-Guide.html  Custom-Modes-Conceptual-Guide.md  G9II-Menu-Options-Detail.md  G9MkI-Complete-Menu-Walkthrough.md
output/: Costa-Rica-Field-Cards.html  Wife-Mode-Cards.html
pwa/: field-cards.json  index.html  manifest.json  sw.js
tools/: generate_detail_cards.py  generate_mode_cards.py
tools/lightning_alert/: blitzortung_client.py  config.json  forecast_client.py  geo_utils.py  lightning_monitor.py  requirements.txt  telegram_notifier.py
