[project]
name = "xlumix-g9-settings"
version = "0.1.0"
description = "Configure Panasonic Lumix G9 II settings from desktop and upload to camera"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
xlumix = "xlumix.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
